--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <ul>
                     <li>Odwołania od Banów należy składać na odpowiednim dziale na Discordzie</li>
                     <li>Jeśli chcesz zgłosić błąd lub kogoś, możesz napisać na chatcie do administracji za pomocą @ lub na odpowiednim dziale na Discordzie</li>
-                    <li>Polecane Komendy: !discord, !motd, !rewards, !paczka</li>
+                    <li>Polecane Komendy: !discord, !motd, !rewards, !paczka, !tryb, !changelog </li>
                 </ul>
             </div>
             <div class="rule">
