--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="rule">
                 <h3>System Weryfikacji</h3>
                 <ul>
-                    <li>W celu Otrzymania rangi <b>Zyfikowany</b> która posiada dużo większe
+                    <li>W celu Otrzymania rangi <b>Zweryfikowany</b> która posiada dużo większe
                         możliwości niż ranga Gracz dołącz do naszego <b></b>Discorda poprzez !rewards
                     </li>
                 </ul>
