--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li>Działania na szkodę serwera</li>
                     <li>Reklamowania innych serwerów</li>
                     <li>Przeszkadzania podczas budowy</li>
-                    <li>Używanie exploitów/skryptów, cheatów</li>
+                    <li>Używania exploitów/skryptów, cheatów</li>
                     <li>Puszczania bindów na Voice chatcie</li>
                     <li>Spawnkillowania</li>
                     <li>Proppusha</li>
@@ -36,7 +36,7 @@
                 <ul>
                     <li>Odwołania od Banów należy składać na odpowiednim dziale na Discordzie</li>
                     <li>Jeśli chcesz zgłosić błąd lub kogoś, możesz napisać na chatcie do administracji za pomocą @ lub na odpowiednim dziale na Discordzie</li>
-                    <li>Polecane Komendy: !discord, !motd, !rewards, !paczka, !tryb, !changelog, !themes </li>
+                    <li>Polecane Komendy: !discord, !motd, !rewards, !paczka, !tryb, !changelog </li>
                 </ul>
             </div>
             <div class="rule">
@@ -54,7 +54,7 @@
                 </ul>
             </div>
         </section>
-        <p class="last-updated">Ostatnia aktualizacja: <b>30.04.2024</b></p>
+        <p class="last-updated">Ostatnia aktualizacja: <b>24.06.2024</b></p>
     </main>
 </body>
 </html>
