--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="rule">
                 <h3>Tokeny</h3>
                 <ul>
-                    <li>Za wszystkie zadania w !rewards zdobywa się tokeny które będzie w przyszłości wymieniać na rangi i inne...</li>
+                    <li>Za wszystkie zadania w !rewards zdobywa się tokeny oraz za niektóre rangi. Tokeny można wykorzystać na odbieranie rang i innych w sklepie</li>
                 </ul>
             </div>
         </section>
